# SPECTRA

./: .gitignore  README.md  appendix_experiment_hyperparameters.md  pyproject.toml
configs/: base.yaml  prithvi_fire_scars.yaml  prithvi_geobench_sa_crop_type.yaml  prithvi_landslide4sense.yaml  prithvi_sen1floods11.yaml  satmae_fire_scars.yaml  satmae_geobench_sa_crop_type.yaml  satmae_landslide4sense.yaml  satmae_sen1floods11.yaml  scalemae_fire_scars.yaml  scalemae_geobench_sa_crop_type.yaml  scalemae_landslide4sense.yaml  scalemae_sen1floods11.yaml
docs/: PUBLISH_AUDIT.md
fixed_splits/: fire_scars_test.txt  fire_scars_train.txt  fire_scars_val.txt  landslide4sense_test.txt  landslide4sense_train.txt  landslide4sense_val.txt  sen1floods11_s42_train.txt  sen1floods11_s42_val.txt  sen1floods11_s43_test.txt  sen1floods11_s43_train.txt  sen1floods11_s43_val.txt  sen1floods11_s44_test.txt  sen1floods11_s44_train.txt  sen1floods11_s44_val.txt  sen1floods11_s45_test.txt  sen1floods11_s45_train.txt  sen1floods11_s45_val.txt  sen1floods11_s46_test.txt  sen1floods11_s46_train.txt  sen1floods11_s46_val.txt  sen1floods11_s47_test.txt  sen1floods11_s47_train.txt  sen1floods11_s47_val.txt  sen1floods11_test.txt
scripts/: data_preflight.py  evaluate_checkpoint.py  finetune.py  generate_splits.py  timing_pass.py
spectra/: __init__.py
spectra/adapter/: __init__.py  nested_lora.py
spectra/backbone/: __init__.py  satmae.py  scalemae.py
spectra/baselines/: __init__.py  schedules.py
spectra/data/: __init__.py  band_utils.py  config.py  datasets.py  srf.py
(+17 files in other folders)
